--- a/config/database.yml
+++ b/config/database.yml
@@ -18,12 +18,5 @@ test:
   <<: *default
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  pool: 20
-  host: 127.0.0.1
-  port: 3306
-  username: root
-  password: root
-  database: mylove
+  <<: *default
 
